--- a/core/main/templates/main/study_materials.html
+++ b/core/main/templates/main/study_materials.html
@@ -2,10 +2,14 @@
 {% load static %}
 {% block content %}
 
-<section class="hero-section d-flex align-items-center text-white" style="background: linear-gradient(to right, #667eea, #764ba2); min-height: 90vh;">
+<section class="hero-section d-flex align-items-center text-white" style="background: linear-gradient(to right, #667eea, #764ba2); min-height: 30vh;">
   <div class="container text-center">
     <h1 class="text-white" style="font-weight: 800; font-size: 48px; margin-bottom: 10px;">Категории учебных материалов</h1>
   </div>
+    <div class="custom-wave">
+  <svg viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,160L40,144C80,128,160,96,240,96C320,96,400,128,480,133.3C560,139,640,117,720,117.3C800,117,880,139,960,133.3C1040,128,1120,96,1200,74.7C1280,53,1360,43,1400,37.3L1440,32L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"></path></svg>
+</div>
+
 </section>
 
 <style>
@@ -34,7 +38,6 @@ h1.page-title {
       border-radius: 2px;
   }
 
-  /* Категории */
   .category-block {
       margin: 0 auto 25px auto;
       max-width: 700px;
